service1-main-app/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-main-app
  labels:
    app: service1-main-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 5000
  selector:
    app: service1-main-app
  type: ClusterIP
